feat: add admin pickup verification
